fixed minor layout issue with buttons

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ html,body{
 .buttonarea {
     position: absolute;
     top: 44%;
-    left: 39%;
+    left: 39.5%;
 
 }
 .signin {
